UPDATE: Registro, Consulta y Modificación empleado
+ Paginación añadida a Consulta parametrizada de empleado #38
+ HOTFIX: Modificación de empleado funciona tras cambio en el paso de
  del th:value en la template. También muestra la foto alojada en la
  base de datos
+ ADD: Registro de empleado
	* Guarda la foto en BD y la muestra en datos finales
	* Añadido botón para cerrar sesión en todos los pasos
	* Corrección de estilos CSS

--- a/administracion/src/main/resources/templates/edicion-empleado.html
+++ b/administracion/src/main/resources/templates/edicion-empleado.html
@@ -43,12 +43,14 @@
             font-size: 14px;
         }
     </style>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script th:src="@{/js/script.js}"></script>
 </head>
 <body>
 
 <h1>Editar Empleado</h1>
 
-<form th:action="@{/administrador/editar-empleado}" th:object="${empleado}" method="post">
+<form th:action="@{/administrador/editar-empleado}" th:object="${empleado}" method="post" enctype="multipart/form-data">
     <label for="nombre">Nombre</label>
     <input type="text" th:field="*{nombre}" id="nombre" required/>
 
@@ -64,9 +66,21 @@
     <label for="departamentoId">Departamento</label>
     <select th:field="*{nombreDepartamento}" id="departamentoId" required>
         <option th:each="departamento : ${departamentos}"
-                th:value="${departamento.id}"
+                th:value="${departamento.nombreDept}"
                 th:text="${departamento.nombreDept}"></option>
     </select>
+
+    <label>Foto actual</label>
+    <img th:if="${empleado.fotoBase64 != null}"
+         th:src="${empleado.fotoBase64}"
+         alt="Foto de [[${empleado.nombre}]]"
+         style="max-width:200px; max-height:200px; object-fit:cover;" />
+
+<!--    <label for="fotografia">Cambiar fotografía</label>-->
+<!--    <input type="file" th:field="*{fotografiaDTO}" name="nuevaFoto" id="fotografia"/>-->
+<!--    <img src="" alt="" id="miniatura">-->
+
+
 
     <button type="submit">Guardar cambios</button>
 
@@ -80,6 +94,26 @@
 <!--        <p th:errors="*{edad}">Edad debe ser un número válido mayor de 18.</p>-->
 <!--    </div>-->
 </form>
+
+<script >
+    $(document).ready(function () {
+        $('#fotografia').on('change', function (){
+            // console.log(this.files);
+
+            muestraMiniatura(this)
+
+            function muestraMiniatura(fileInput) {
+                let file = fileInput.files[0];
+                let reader = new FileReader();
+                reader.onload= function (e){
+                    $('#miniatura').attr('src', e.target.result)
+                }
+                reader.readAsDataURL(file);
+            }
+
+        });
+    });
+</script>
 
 </body>
 </html>
