--- a/comun/src/main/resources/static/css/estilos.css
+++ b/comun/src/main/resources/static/css/estilos.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Helvetica Neue', Helvetica, sans-serif;
     color: #000;
     background-color: #fff;
     margin: 0;
@@ -13,36 +13,7 @@ body {
     line-height: 1.6;
 }
 
-.navbar{
-    /*position: absolute;*/
-    left: 0;
-    top: 0;
-    height: 100px;
-    /*background: #fff;*/
-}
 
-nav ul {
-    list-style: none;
-    display: flex;
-    /*flex-direction: column;*/
-}
-
-
-nav ul li a img {
-    opacity: 0.5;
-    transition: opacity 0.3s ease-in-out;
-    width: 50px;
-    height: auto;
-    background: #fff;
-    box-shadow: 0 2px  rgba(0, 0, 0, 0.1);
-    border-radius: 10px 0 0 10px;
-    padding: 5px;
-
-}
-
-nav ul li a.active img {
-    opacity: 1;
-}
 
 /*Errores de Validaciones*/
 .error{
@@ -58,6 +29,14 @@ h2 {
     margin: 2rem 0;
 }
 
+.contenedor-principal {
+    max-width: 900px;
+    max-height: 1000px;
+    margin: 0 auto;
+    padding: 2rem;
+    position: relative;
+}
+
 /* Contenedor del formulario */
 form {
     max-width: 700px;
@@ -65,6 +44,16 @@ form {
     padding: 2rem;
     border: 1px solid #eaeaea;
     background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.fotografia{
+    position: absolute;
+    top: 25%;
+    right: 6%;
+    transform: translate(-50%, -50%);
+    border: 1px solid #ddd;
+    padding: 5px;
 }
 
 /* Etiquetas y campos de entrada */
@@ -145,6 +134,37 @@ textarea {
     }
 }
 
+/*NavBar Registro Empleado*/
+.navbar{
+    position: absolute;
+    left: 10.5%;
+    top: -3%;
+    /*!*height: 100px;*!*/
+    /*background: #fff;*/
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+}
+
+
+nav ul li a img {
+    opacity: 0.5;
+    transition: opacity 0.3s ease-in-out;
+    width: 50px;
+    height: auto;
+    background: #fff;
+    box-shadow: 0 2px  rgba(0, 0, 0, 0.1);
+    border-radius: 10px 0 0 10px;
+    padding: 5px;
+
+}
+
+nav ul li a.active img {
+    opacity: 1;
+}
+
 body.area-personal {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     color: #111;
@@ -218,6 +238,8 @@ hr {
     gap: 20px;
 }
 
+/*Botones*/
+
 .boton {
     display: inline-block;
     width: 50%;
@@ -268,8 +290,58 @@ input.boton:hover{
 
 .btn-form{
     display: flex;
+    gap: 3px;
+    justify-content: space-between;
 }
 
 .btn-seleccionar{
     margin: 20px 0;
+}
+
+/*Tablas Busqueda de empleado*/
+
+.tabla-datos {
+    width: 100%;
+    max-width: 900px;
+    margin: 2rem auto;
+    border-collapse: collapse;
+    background-color: #ffffff;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    font-size: 0.95rem;
+}
+
+.tabla-datos th,
+.tabla-datos td {
+    padding: 12px 16px;
+    text-align: left;
+    border-bottom: 1px solid #e0e0e0;
+}
+
+.tabla-datos th {
+    background-color: #fff;
+    color: black;
+    text-transform: uppercase;
+    font-size: 0.9rem;
+}
+
+.tabla-datos tr:hover {
+    background-color: #f1f1f1;
+}
+
+.texto-centrado {
+    text-align: center;
+}
+
+.texto-derecha {
+    text-align: right;
+}
+
+.tabla-datos .acciones {
+    justify-content: flex-end;
+}
+
+.tabla-datos .acciones .boton {
+    margin-left: 0.5rem;
 }
